Working out kinks in iOS version

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -27,7 +27,8 @@
 		}
     },
     "files" : [
-        "appsee.android.ts"
+        "appsee.android.ts",
+        "appsee.ios.ts"
     ],
     "exclude": [
         "node_modules"
