--- a/src/package.json
+++ b/src/package.json
@@ -43,16 +43,13 @@
   "homepage": "https://github.com/gizmo385/nativescript-appsee",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "tns-core-modules": "^3.1.0",
-    "tns-platform-declarations": "^3.1.0",
-    "typescript": "~2.3.0",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
-    "tslint": "^5.0.0"
-  },
-  "dependencies": {
     "tns-core-modules": "^3.2.0",
-    "tns-platform-declarations": "^3.2.0"
+    "tns-platform-declarations": "^3.2.0",
+    "tslint": "^5.0.0",
+    "typescript": "~2.3.0"
   },
+  "dependencies": { },
   "bootstrapper": "nativescript-plugin-seed"
 }
