--- a/demo/package.json
+++ b/demo/package.json
@@ -2,10 +2,10 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-android": {
-      "version": "3.1.1"
+      "version": "3.2.0"
     },
     "tns-ios": {
-      "version": "3.1.0"
+      "version": "3.2.0"
     }
   },
   "dependencies": {
@@ -32,7 +32,7 @@
     "nativescript-dev-webpack": "^0.7.3",
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.1.0",
-    "tns-platform-declarations": "^3.1.0",
+    "tns-platform-declarations": "~3.2.0",
     "tslint": "~5.4.3",
     "typescript": "~2.3.0",
     "webpack": "~3.2.0",
