--- a/src/package.json
+++ b/src/package.json
@@ -6,25 +6,25 @@
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "3.0.0",
-      "ios": "3.0.0"
+      "android": "3.2.0",
+      "ios": "3.2.0"
     }
   },
   "scripts": {
-    "tsc": "tsc -skipLibCheck",
-    "build": "npm i && tsc",
-    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
-    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
+    "_install": "npm install --no-shrinkwrap",
+    "build": "npm run _install && tsc",
+    "postclone": "npm run _install && node scripts/postclone.js && cd ../demo && npm run _install && cd ../src && npm run plugin.link",
+    "test.android": "npm run _install && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
+    "test.ios": "npm run _install && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
     "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
     "plugin.link": "npm link && cd ../demo && npm link nativescript-appsee && cd ../src",
     "plugin.tscwatch": "npm run tsc -- -w",
-    "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-    "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+    "demo.ios": "npm run _install && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
+    "demo.android": "npm run _install && npm run tsc && cd ../demo && tns run android --syncAllFiles",
     "demo.reset": "cd ../demo && rimraf platforms",
     "plugin.prepare": "npm run tsc && cd ../demo && tns plugin remove nativescript-appsee && tns plugin add ../src",
     "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
-    "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
+    "ci.tslint": "npm run _install && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
   },
   "keywords": [
     "NativeScript",
@@ -45,11 +45,13 @@
   "devDependencies": {
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
-    "tns-core-modules": "^3.2.0",
-    "tns-platform-declarations": "^3.2.0",
     "tslint": "^5.0.0",
     "typescript": "~2.3.0"
   },
-  "dependencies": { },
+  "dependencies": {
+    "tns-core-modules": "3.3.0",
+    "tns-core-modules-widgets": "3.3.0",
+    "tns-platform-declarations": "3.3.0"
+  },
   "bootstrapper": "nativescript-plugin-seed"
 }
