--- a/src/package.json
+++ b/src/package.json
@@ -5,9 +5,11 @@
   "main": "appsee",
   "typings": "index.d.ts",
   "nativescript": {
-    "platforms": {
-      "android": "3.2.0",
-      "ios": "3.2.0"
+    "tns-android": {
+      "version": "3.3.1"
+    },
+    "tns-ios": {
+      "version": "3.3.0"
     }
   },
   "scripts": {
@@ -46,12 +48,12 @@
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
     "tslint": "^5.0.0",
-    "typescript": "~2.3.0"
+    "typescript": "~2.6.1"
   },
   "dependencies": {
-    "tns-core-modules": "3.3.0",
-    "tns-core-modules-widgets": "3.3.0",
-    "tns-platform-declarations": "3.3.0"
+    "tns-core-modules": "~3.3.0",
+    "tns-core-modules-widgets": "~3.3.0",
+    "tns-platform-declarations": "~3.3.0"
   },
   "bootstrapper": "nativescript-plugin-seed"
 }
