--- a/src/package.json
+++ b/src/package.json
@@ -47,10 +47,10 @@
   "devDependencies": {
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
+    "tns-core-modules": "^3.2.0",
+    "tns-platform-declarations": "^3.2.0",
     "tslint": "^5.0.0",
-    "tns-core-modules": "~3.3.0",
-    "tns-platform-declarations": "~3.3.0",
-    "typescript": "~2.6.1"
+    "typescript": "^2.6.1"
   },
   "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
