--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,18 @@
 .vscode
 .idea
 .DS_Store
-*.js
 *.js.map
 *.log
 *.tar.gz
-src/*.d.ts
-!src/index.d.ts
-!src/references.d.ts
-!src/scripts/*.js
-!seed-tests/*.js
+node_modules
+
 seed-tests/seed-copy/**/*.*
 seed-tests/seed-copy-new-git-repo/**/*.*
-!demo/karma.conf.js
-!demo/app/tests/*.js
-demo/*.d.ts
-!demo/references.d.ts
 demo/lib
 demo/platforms
-node_modules
-publish/src
-publish/package
+demo/node_modules
 demo/report/report.html
 demo/report/stats.json
-
 demo/app/app.ts
+publish/src
+publish/package
