--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.tgz
 *.tar.gz
 node_modules
+dist/
 
 demo*/app/*.js
 demo*/hooks
@@ -23,8 +24,6 @@ publish/package
 
 
 # DO not ignore files/folders
-!dist/*
-
 !demo*/karma.conf.js
 !demo*/app/tests/*.js
 !seed-tests/*.js
