--- a/src/package.json
+++ b/src/package.json
@@ -5,11 +5,9 @@
   "main": "appsee",
   "typings": "index.d.ts",
   "nativescript": {
-    "tns-android": {
-      "version": "3.2.0"
-    },
-    "tns-ios": {
-      "version": "3.2.0"
+    "platforms": {
+      "android": "3.0.0",
+      "ios": "3.0.0"
     }
   },
   "scripts": {
