--- a/demo/package.json
+++ b/demo/package.json
@@ -2,42 +2,42 @@
   "nativescript": {
     "id": "org.nativescript.demo",
     "tns-android": {
-      "version": "3.2.0"
+      "version": "4.2.0"
     },
     "tns-ios": {
-      "version": "3.2.0"
+      "version": "4.2.0"
     }
   },
   "dependencies": {
-    "nativescript-appsee": "../src",
+    "nativescript-appsee": "../dist",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
-    "tns-core-modules": "^3.1.1"
+    "tns-core-modules": "^4.2.0"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "~3.1.3",
-    "babel-traverse": "6.12.0",
-    "babel-types": "6.11.1",
-    "babylon": "6.8.4",
-    "copy-webpack-plugin": "~4.0.1",
-    "extract-text-webpack-plugin": "~3.0.0",
-    "filewalker": "0.1.2",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
+    "awesome-typescript-loader": "^5.2.0",
+    "babel-traverse": "^6.26.0",
+    "babel-types": "^6.26.0",
+    "babylon": "^6.18.0",
+    "copy-webpack-plugin": "^4.5.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "filewalker": "^0.1.3",
+    "jasmine-core": "^3.2.1",
+    "karma": "^3.0.0",
+    "karma-jasmine": "^1.1.2",
     "karma-nativescript-launcher": "^0.4.0",
-    "lazy": "1.0.11",
-    "nativescript-css-loader": "~0.26.0",
-    "nativescript-dev-typescript": "libs",
-    "nativescript-dev-webpack": "^0.7.3",
-    "raw-loader": "~0.5.1",
-    "resolve-url-loader": "~2.1.0",
-    "tns-platform-declarations": "~3.2.0",
-    "tslint": "~5.4.3",
-    "typescript": "~2.3.0",
-    "webpack": "~3.2.0",
-    "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-sources": "~1.0.1"
+    "lazy": "^1.0.11",
+    "nativescript-css-loader": "^0.26.1",
+    "nativescript-dev-typescript": "^0.7.2",
+    "nativescript-dev-webpack": "^0.15.1",
+    "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.3.0",
+    "tns-platform-declarations": "^4.2.0",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1",
+    "webpack": "^4.16.5",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-sources": "^1.1.0"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
