--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -9,5 +9,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.aar'])
 }
